fix card spacing

--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -37,3 +37,7 @@ video {
   max-height: 250px;
   overflow:auto;
 }
+
+.card-button {
+  margin-bottom: 20px !important;
+}
